--- a/Sushi Dash/Packages/manifest.json
+++ b/Sushi Dash/Packages/manifest.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "com.unity.adaptiveperformance": "4.0.1",
     "com.unity.collab-proxy": "2.0.4",
+    "com.unity.connect.share": "4.2.3",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.feature.mobile": "1.0.0",
     "com.unity.ide.rider": "3.0.21",
