--- a/Sushi Dash/Packages/manifest.json
+++ b/Sushi Dash/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.adaptiveperformance": "4.0.1",
+    "com.unity.adaptiveperformance.samsung.android": "4.0.2",
     "com.unity.collab-proxy": "2.0.4",
     "com.unity.connect.share": "4.2.3",
     "com.unity.feature.2d": "2.0.0",
